<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.roomdatabase.main.MainContract.MainPresenter" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        android:orientation="vertical"
        tools:context=".main.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_mobile_no"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="@{()->presenter.checkValidation(edName.getText().toString(),edEmail.getText().toString(),edPhoneNo.getText().toString())}"
                android:text="@string/save" />

            <LinearLayout
                android:id="@+id/linearUserList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/user_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:onClick="@{()->presenter.openLink(@string/profile_github)}"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/icon_github" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:onClick="@{()->presenter.openLink(@string/profile_stack)}"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/icon_stack_overflow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:onClick="@{()->presenter.openLink(@string/profile_linkedin)}"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/icon_linkedin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:onClick="@{()->presenter.openLink(@string/profile_twitter)}"
                    android:padding="@dimen/_5sdp"
                    app:srcCompat="@drawable/icon_twitter" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>